[metadata]
name = preview-service
description = generate thumbnail images from all kinds of documents using a simple web API
author = Florian Purchess
author_email = florian@attacke.ventures
url = https://github.com/FPurchess/preview-service

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    starlette
    preview-generator
    python-multipart
    aiofiles

[options.packages.find]
exclude =
    docs
    tests
    tests.*

[bdist_wheel]
universal = 0